# ly.communicating

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
module/core/: .gitignore  CMakeLists.txt
module/core/include/ly/communicating/: core.hpp
module/core/include/ly/communicating/core/: basic_bytes.hpp  basic_tasks.hpp  byte_reader.hpp  byte_rwer.hpp  byte_writer.hpp  ping_pong_buffer.hpp  sao_item.hpp  triple_pool.hpp  typed_message.hpp
module/core/test/: use_interface.cpp
test/: test.cpp
